[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "httpx[cli]>=0.28.1",
    "prometheus-client>=0.22.1",
    "pydantic>=2",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "sqlalchemy>=2",
    "sqlmodel>=0.0.24",
    "structlog>=25.4.0",
    "tenacity>=9.1.2",
    "testcontainers[postgresql,test]>=4.12.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "schemathesis>=4.0.23",
    "testcontainers[postgresql,test]>=4.12.0",
]
